# mailing_management_service

./: .env.example  .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: send_mail.py
mailing/migrations/: 0001_initial.py  0002_alter_newsletter_options_and_more.py  0003_message_create_at_alter_message_body_letter.py  0004_alter_mailingrecipient_email.py  0005_mailingattempt.py  0006_alter_newsletter_last_sending.py  0007_alter_newsletter_options.py  0008_mailingrecipient_owner_message_owner_and_more.py  0009_mailingattempt_email_recipient_and_more.py  0010_alter_mailingattempt_email_recipient.py
mailing/templates/mailing/: attempt.html  base.html  home.html  mailingrecipient_confirm_delete.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_confirm_delete.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html  recipient_detail.html  recipient_form.html  recipient_list.html
mailing/views/: __init__.py  home_views.py  manager_views.py  message_views.py  newletter_views.py  recipient_views.py  statistics_views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py  createmanegment.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_avatar_user_country_user_phone.py
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  (+3 more)
(+14 files in other folders)
